# tutor-discovery

./: .gitlab-ci.yml  .hatch_build.py  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: auto-add-to-project.yml  sync.yml  test.yml
changelog.d/: 20230908_095220_regis_nightly.md  20230909_160414_i_atlas.md  20231102_142414_faraz.maqsood_fix_extra_requirements_issue.md  20231113_125255_faraz.maqsood_introduce_course_discovery_repository_settings.md  20231208_172458_faraz.maqsood_faraz_fix_base_url_for_media_links.md  20240313_130212_faraz.maqsood_volumes_empty_list_error_in_dev_mode.md  20240314_131222_faraz.maqsood_python_upgrade_to_v3_12_2.md  20240412_140658_andres.md  20240514_140102_faraz.maqsood_redwood.md  20240626_115731_faraz.maqsood_images_persistance_issue.md  20240704_143427_faraz.maqsood_update_dockerfile.md  20240710_160247_evgen.dyudyunov_fix_service_user_permissions.md  20241018_185457_hina.khadim_upgrade_ubuntu.md  20241025_181736_faraz.maqsood_enable_elastic_search_for_discovery.md  20241122_121506_faraz.maqsood_sumac.md  20250108_184343_faraz.maqsood_add_support_for_consuming_events_from_event_bus.md  20250121_170746_faraz.maqsood_faraz_add_setting_variable_for_programs.md  20250124_200748_faraz.maqsood_faraz_migrate_from_setup_py_and_setuptools_to_pyproject_toml_and_hatch.md  20250324_230121_danyal.faheem_remove_site_configuration_script.md  20250808_142901_muhammad.labeeb_release.md  20260109_004342_faraz.maqsood_add_event_bus_defaults.md  20260121_205009_codewithemad_release.md  20260127_144108_faraz.maqsood_celery_tasks_failure_due_to_empty_broker_url.md  20260415_180143_ali.abbas02_python_version_upgrade.md  scriv.ini
tests/: test_utils.py
tutordiscovery/: __about__.py  plugin.py  utils.py
tutordiscovery/patches/: caddyfile  dev-docker-compose-jobs-services  discovery-common-settings  https-create  k8s-deployments  k8s-deployments-nginx-init-containers  k8s-deployments-nginx-volume-mounts  k8s-deployments-nginx-volumes  k8s-ingress-certificates  k8s-ingress-rules  k8s-ingress-tls-hosts  k8s-jobs  k8s-services  k8s-volumes  kustomization-configmapgenerator  local-docker-compose-caddy-aliases  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-nginx-volumes  local-docker-compose-permissions-command  local-docker-compose-permissions-volumes  local-docker-compose-services  mfe-lms-common-settings  nginx-extra  openedx-lms-common-settings  proxy-apache  proxy-nginx
(+9 files in other folders)
