# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-discovery"
license = { text = "AGPL-3.0-only" }
authors = [
  {name = "Edly"},
  {email = "hello@edly.io"},
]
maintainers = [
  {name = "Muhammad Labeeb"},
  {email = "muhammad.labeeb@arbisoft.com"},
]
description="A Tutor plugin for course discovery, the Open edX service for providing access to consolidated course and program metadata"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=21.0.0,<22.0.0",
]
# these fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "tutor[dev]>=21.0.0,<22.0.0", 
  "ruff", 
]

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://docs.tutor.edly.io/"
Documentation = "https://docs.tutor.edly.io/"
Source = "https://github.com/overhangio/tutor-discovery"
Issues = "https://github.com/overhangio/tutor-discovery/issues"
Changelog = "https://github.com/overhangio/tutor-discovery/blob/release/CHANGELOG.md"
Community = "https://discuss.openedx.org/tag/tutor"

[tool.hatch.version]
path = "tutordiscovery/__about__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutordiscovery"]
exclude = ["tests*"]

[tool.hatch.build.targets.wheel]
packages = ["tutordiscovery"]

[tool.ruff]
exclude = ["templates", "docs/_ext"]

[tool.ruff.lint]
# E: pycodestyle errors
# I: isort
# N: pep8-naming
select = ["E", "I", "N"]

# F401: unused-import
# F841: unused-variable
# W292: missing-newline-at-end-of-file
extend-select = ["F401", "F841", "W292"]

[tool.ruff.format]

[project.entry-points."tutor.plugin.v1"]
discovery = "tutordiscovery.plugin"
